# push_swap

./: CMakeLists.txt  Makefile  push_swap  traces.txt
includes/: libft.h  push_swap.h
init/: init_list.c
libft/: Makefile  ft_free_str.c  libft.h  libft.h.gch
src/: check.c  check_errors.c  ft_split.c  main.c  structure_list.c  utils.c  utils_bis.c
src/check/: check.c  check_errors.c
src/init/: free_utils.c  init_list.c
src/operation/: push.c  reverse_rotate.c  rotate.c  swap.c
src/sorting/: copie.c  index.c  sorting_3.c  sorting_more.c  sorting_under_5.c  sorting_under_5_bis.c
